--- a/themes/templatemoster/html/weeducate/pages/prebuilt-pages/default-login.html
+++ b/themes/templatemoster/html/weeducate/pages/prebuilt-pages/default-login.html
@@ -369,29 +369,29 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar ms-navbar">
-
+<!-- 
       <div class="ms-aside-toggler ms-toggler pl-0" data-target="#ms-side-nav" data-toggle="slideLeft">
         <span class="ms-toggler-bar bg-primary"></span>
         <span class="ms-toggler-bar bg-primary"></span>
         <span class="ms-toggler-bar bg-primary"></span>
-      </div>
+      </div> -->
 
       <div class="logo-sn logo-sm ms-d-block-sm">
         <a class="pl-0 ml-0 text-center navbar-brand mr-0" href="../../index.html"><img src="../../assets/img/logo/weeducate-4.png" alt="logo"> </a>
       </div>
 
       <ul class="ms-nav-list ms-inline mb-0" id="ms-nav-options">
-        <li class="ms-nav-item ms-search-form pb-0 py-0">
+        <!-- <li class="ms-na  v-item ms-search-form pb-0 py-0">
           <form class="ms-form" method="post">
             <div class="ms-form-group my-0 mb-0 has-icon fs-14">
               <input type="search" class="ms-form-input" name="search" placeholder="Search here..." value="">
               <i class="flaticon-search text-disabled"></i>
             </div>
           </form>
-        </li>
-        <li class="ms-nav-item">
+        </li> -->
+        <!-- <li class="ms-nav-item">
           <a href="#" class="btn btn-primary mt-0">Login</a>
-        </li>
+        </li> -->
       </ul>
 
       <div class="ms-toggler ms-d-block-sm pr-0 ms-nav-toggler" data-toggle="slideDown" data-target="#ms-nav-options">
@@ -403,14 +403,9 @@
     </nav>
 
     <!-- Body Content Wrapper -->
-    <div class="ms-content-wrapper ms-auth">
-
-      <div class="ms-auth-container">
-        <div class="ms-auth-col">
-          <div class="ms-auth-bg"></div>
-        </div>
-        <div class="ms-auth-col">
-          <div class="ms-auth-form">
+   <div class="ms-content-wrapper ms-auth">
+  <div class="ms-auth-container d-flex justify-content-center align-items-center" style="min-height:100vh;">
+    <div class="ms-auth-form" style="width: 800px; max-width: 100%;">
             <form class="needs-validation" novalidate="">
               <h1>Login to Account</h1>
               <p>Please enter your email and password to continue</p>
@@ -440,7 +435,7 @@
                 <span> Remember Password </span>
                 <label class="d-block mt-3"><a href="#" class="btn-link" data-toggle="modal" data-target="#modal-12">Forgot Password?</a></label>
               </div>
-              <button class="btn btn-primary mt-4 d-block w-100" type="submit">Sign In</button>
+              <button class="btn btn-primary mt-4 d-block w-100" type="submit">Login</button>
               <span class="d-block text-center my-4">Or</span>
               <button type="button" class="btn mt-4 d-block w-100 btn-social-login"> <img src="../../assets/img/others/facebook.png" alt="image"> <span>Login with Facebook</span> </button>
               <button type="button" class="btn mt-4 d-block w-100 btn-social-login"> <img src="../../assets/img/others/google.png" alt="image"> <span>Login with Google</span> </button>
