--- a/themes/templatemoster/html/weeducate/pages/prebuilt-pages/default-register.html
+++ b/themes/templatemoster/html/weeducate/pages/prebuilt-pages/default-register.html
@@ -381,94 +381,77 @@
       </div>
 
       <ul class="ms-nav-list ms-inline mb-0" id="ms-nav-options">
-        <li class="ms-nav-item ms-search-form pb-0 py-0">
+        <!-- <li class="ms-nav-item ms-search-form pb-0 py-0">
           <form class="ms-form" method="post">
             <div class="ms-form-group my-0 mb-0 has-icon fs-14">
               <input type="search" class="ms-form-input" name="search" placeholder="Search here..." value="">
               <i class="flaticon-search text-disabled"></i>
             </div>
           </form>
-        </li>
-        <li class="ms-nav-item">
-          <a href="#" class="btn btn-primary mt-0">Login</a>
-        </li>
+        </li> -->
+        <!-- <li class="ms-nav-item"> -->
+          <!-- <a href="#" class="btn btn-primary mt-0">Login</a> -->
+        <!-- </li> -->
       </ul>
 
-      <div class="ms-toggler ms-d-block-sm pr-0 ms-nav-toggler" data-toggle="slideDown" data-target="#ms-nav-options">
+      <!-- <div class="ms-toggler ms-d-block-sm pr-0 ms-nav-toggler" data-toggle="slideDown" data-target="#ms-nav-options">
         <span class="ms-toggler-bar bg-primary"></span>
         <span class="ms-toggler-bar bg-primary"></span>
         <span class="ms-toggler-bar bg-primary"></span>
-      </div>
+      </div> -->
 
     </nav>
 
     <!-- Body Content Wrapper -->
-    <div class="ms-content-wrapper ms-auth">
-
-      <div class="ms-auth-container">
-        <div class="ms-auth-col">
-          <div class="ms-auth-bg"></div>
-        </div>
-        <div class="ms-auth-col">
-          <div class="ms-auth-form">
+<div class="ms-content-wrapper ms-auth">
+  <div class="ms-auth-container d-flex justify-content-center align-items-center" style="min-height:100vh;">
+    <div class="ms-auth-form" style="width: 800px; max-width: 100%;">
             <form class="needs-validation" novalidate="">
-              <h1>Create Account</h1>
-              <p>Please enter personal information to continue</p>
-              <div class="form-row">
-                <div class="col-md-6 ">
-                  <label for="validationCustom01">First name</label>
-                  <div class="input-group">
-                    <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="John" required="">
-                    <div class="valid-feedback">
-                      Looks good!
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 ">
-                  <label for="validationCustom02">Last name</label>
-                  <div class="input-group">
-                    <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Doe" required="">
-                    <div class="valid-feedback">
-                      Looks good!
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="form-row">
-                <div class="col-md-12 ">
-                  <label for="validationCustom03">Email Address</label>
-                  <div class="input-group">
-                    <input type="email" class="form-control" id="validationCustom03" placeholder="Email Address" required="">
-                    <div class="invalid-feedback">
-                      Please provide a valid email.
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-12 ">
-                  <label for="validationCustom04">Password</label>
-                  <div class="input-group">
-                    <input type="password" class="form-control" id="validationCustom04" placeholder="Password" required="">
-                    <div class="invalid-feedback">
-                      Please provide a password.
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="form-check pl-0">
-                  <label class="ms-checkbox-wrap">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required="">
-                    <i class="ms-checkbox-check"></i>
-                  </label>
-                  <span> Agree to terms and conditions </span>
-                </div>
-              </div>
-              <button class="btn btn-primary mt-4 d-block w-100" type="submit">Create Account</button>
-              <span class="d-block text-center my-4">Or</span>
-              <button type="button" class="btn mt-4 d-block w-100 btn-social-login"> <img src="../../assets/img/others/facebook.png" alt="image"> <span>Signup with Facebook</span> </button>
-              <button type="button" class="btn mt-4 d-block w-100 btn-social-login"> <img src="../../assets/img/others/google.png" alt="image"> <span>Signup with Google</span> </button>
-              <p class="mb-0 mt-3 text-center">Already have an account? <a class="btn-link" href="default-login.html">Login</a> </p>
-            </form>
+              <h1>회원가입</h1>
+              <p>가입을 위해 정보를 입력해 주세요</p>
+   <div class="form-row">
+  <div class="col-md-12">
+    <label for="validationCustom01">이름</label>
+    <div class="input-group">
+      <input type="text" class="form-control" id="validationCustom01" placeholder="이름을 입력하세요" required="">
+    </div>
+  </div>
+</div>
+<div class="form-row">
+  <div class="col-md-12">
+    <label for="validationCustom03">이메일 주소</label>
+    <div class="input-group">
+      <input type="email" class="form-control" id="validationCustom03" placeholder="이메일 주소를 입력하세요" required="">
+    </div>
+  </div>
+  <div class="col-md-12">
+    <label for="validationCustom04">비밀번호</label>
+    <div class="input-group">
+      <input type="password" class="form-control" id="validationCustom04" placeholder="비밀번호를 입력하세요" required="">
+    </div>
+  </div>
+</div>
+<div class="form-group">
+  <div class="form-check pl-0">
+    <label class="ms-checkbox-wrap">
+      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required="">
+      <i class="ms-checkbox-check"></i>
+    </label>
+    <span> 이용 약관에 동의합니다 </span>
+  </div>
+</div>
+<button class="btn btn-primary mt-4 d-block w-100" type="submit">회원가입</button>
+<span class="d-block text-center my-4">또는</span>
+<button type="button" class="btn mt-4 d-block w-100 btn-social-login">
+  <img src="../../assets/img/others/facebook.png" alt="image">
+  <span>페이스북으로 회원가입</span>
+</button>
+<button type="button" class="btn mt-4 d-block w-100 btn-social-login">
+  <img src="../../assets/img/others/google.png" alt="image">
+  <span>구글로 회원가입</span>
+</button>
+<p class="mb-0 mt-3 text-center">이미 계정이 있으신가요? <a class="btn-link" href="default-login.html">로그인</a></p>
+</form>
 
           </div>
         </div>
