--- a/themes/templatemoster/html/weeducate/pages/prebuilt-pages/default-login.html
+++ b/themes/templatemoster/html/weeducate/pages/prebuilt-pages/default-login.html
@@ -407,39 +407,38 @@
   <div class="ms-auth-container d-flex justify-content-center align-items-center" style="min-height:100vh;">
     <div class="ms-auth-form" style="width: 800px; max-width: 100%;">
             <form class="needs-validation" novalidate="">
-              <h1>Login to Account</h1>
-              <p>Please enter your email and password to continue</p>
-              <div class="mb-3">
-                <label for="validationCustom08">Email Address</label>
-                <div class="input-group">
-                  <input type="email" class="form-control" id="validationCustom08" placeholder="Email Address" required="">
-                  <div class="invalid-feedback">
-                    Please provide a valid email.
-                  </div>
-                </div>
-              </div>
-              <div class="mb-2">
-                <label for="validationCustom09">Password</label>
-                <div class="input-group">
-                  <input type="password" class="form-control" id="validationCustom09" placeholder="Password" required="">
-                  <div class="invalid-feedback">
-                    Please provide a password.
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="ms-checkbox-wrap">
-                  <input class="form-check-input" type="checkbox" value="">
-                  <i class="ms-checkbox-check"></i>
-                </label>
-                <span> Remember Password </span>
-                <label class="d-block mt-3"><a href="#" class="btn-link" data-toggle="modal" data-target="#modal-12">Forgot Password?</a></label>
-              </div>
-              <button class="btn btn-primary mt-4 d-block w-100" type="submit">Login</button>
-              <span class="d-block text-center my-4">Or</span>
-              <button type="button" class="btn mt-4 d-block w-100 btn-social-login"> <img src="../../assets/img/others/facebook.png" alt="image"> <span>Login with Facebook</span> </button>
-              <button type="button" class="btn mt-4 d-block w-100 btn-social-login"> <img src="../../assets/img/others/google.png" alt="image"> <span>Login with Google</span> </button>
-              <p class="mb-0 mt-3 text-center">Don't have an account? <a class="btn-link" href="default-register.html">Create Account</a> </p>
+<h1>로그인</h1>
+<p>계속하려면 이메일과 비밀번호를 입력하세요</p>
+
+<label for="validationCustom08">이메일 주소</label>
+<input type="email" class="form-control" placeholder="이메일 주소를 입력하세요" required="">
+
+<label for="validationCustom09">비밀번호</label>
+<input type="password" class="form-control" placeholder="비밀번호를 입력하세요" required="">
+
+<label class="ms-checkbox-wrap">
+  <input class="form-check-input" type="checkbox">
+  <i class="ms-checkbox-check"></i>
+</label>
+<span> 비밀번호 저장 </span>
+
+<a href="#" class="btn-link"> 비밀번호를 잊으셨나요?</a>
+
+<button class="btn btn-primary mt-4 d-block w-100" type="submit">로그인</button>
+
+<span class="d-block text-center my-4">또는</span>
+
+<button type="button" class="btn mt-4 d-block w-100 btn-social-login">
+  <img src="../../assets/img/others/facebook.png" alt="image">
+  <span>페이스북으로 로그인</span>
+</button>
+
+<button type="button" class="btn mt-4 d-block w-100 btn-social-login">
+  <img src="../../assets/img/others/google.png" alt="image">
+  <span>구글로 로그인</span>
+</button>
+
+<p class="mb-0 mt-3 text-center">아직 계정이 없으신가요? <a class="btn-link" href="default-register.html">회원가입</a></p>
             </form>
           </div>
         </div>
